add read source code endpoint
