# lsproxy/src/handlers/mod.rs
@@ -2,5 +2,5 @@ mod definitions_in_file;
 mod find_definition;
 mod find_references;
 mod list_files;
-
-pub use self::{definitions_in_file::*, find_definition::*, find_references::*, list_files::*};
+mod read_source_code;
+pub use self::{definitions_in_file::*, find_definition::*, find_references::*, list_files::*, read_source_code::*};
